Exception fixes and patches